tests/data/string/indexof/negative/Char StringComparison.fs
open System
"foo".IndexOf('f',StringComparison.InvariantCulture)
